[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/ka1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/playfont_22.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0.484863, 0.465923, 0.465923, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 40.0
margin_right = 580.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
margin_right = 520.0
margin_bottom = 29.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]OPTIONS[/center]"
text = "OPTIONS"
fit_content_height = true

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 33.0
margin_right = 520.0
margin_bottom = 280.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 162.0
margin_right = 358.0
margin_bottom = 247.0
size_flags_horizontal = 0
custom_constants/separation = 22
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/CenterRow/Buttons"]
margin_top = 38.0
margin_right = 196.0
margin_bottom = 64.0

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/HBoxContainer"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 21.0
rect_min_size = Vector2( 20, 5 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="NewGameButton" type="Button" parent="Menu/CenterRow/Buttons/HBoxContainer"]
margin_left = 24.0
margin_right = 196.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "New Game"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/CenterRow/Buttons"]
margin_top = 86.0
margin_right = 196.0
margin_bottom = 112.0

[node name="Label2" type="Label" parent="Menu/CenterRow/Buttons/HBoxContainer2"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 21.0
rect_min_size = Vector2( 20, 5 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="ContinueButton" type="Button" parent="Menu/CenterRow/Buttons/HBoxContainer2"]
margin_left = 24.0
margin_right = 196.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Continue"
flat = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu/CenterRow/Buttons"]
margin_top = 134.0
margin_right = 196.0
margin_bottom = 160.0

[node name="Label3" type="Label" parent="Menu/CenterRow/Buttons/HBoxContainer3"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 21.0
rect_min_size = Vector2( 20, 5 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="OptionsButton" type="Button" parent="Menu/CenterRow/Buttons/HBoxContainer3"]
margin_left = 24.0
margin_right = 176.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
flat = true

[node name="HBoxContainer4" type="HBoxContainer" parent="Menu/CenterRow/Buttons"]
margin_top = 182.0
margin_right = 196.0
margin_bottom = 208.0

[node name="Label4" type="Label" parent="Menu/CenterRow/Buttons/HBoxContainer4"]
margin_top = 5.0
margin_right = 20.0
margin_bottom = 21.0
rect_min_size = Vector2( 20, 5 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="ExitButton" type="Button" parent="Menu/CenterRow/Buttons/HBoxContainer4"]
margin_left = 24.0
margin_right = 116.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
flat = true
[connection signal="pressed" from="Menu/CenterRow/Buttons/HBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/HBoxContainer2/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/HBoxContainer4/ExitButton" to="." method="_on_ExitButton_pressed"]
